<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_close"
        android:checkable="true"
        android:title="@string/nav_filter"
        app:actionLayout="@layout/close_icon"
        app:showAsAction="ifRoom|withText"

        />
    </group>
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_hearted"
            android:checkable="true"
            android:title="@string/nav_hearted"
            app:actionLayout="@layout/checkbox"
            app:showAsAction="ifRoom|withText"

            />
        <item
            android:id="@+id/nav_favourite"

            android:title="@string/nav_favourite"
            android:checkable="true"
            app:actionLayout="@layout/checkbox"
            app:showAsAction="ifRoom|withText"/>
            <!--app:actionViewClass="android.widget.CheckBox"-->

        <item
            android:id="@+id/nav_poem"

            android:title="@string/nav_poems"
            android:checkable="true"
            app:actionLayout="@layout/checkbox"
            app:showAsAction="ifRoom|withText"/>
            <!--app:actionViewClass="android.widget.CheckBox"-->

        <item
            android:id="@+id/nav_story"

            android:title="@string/nav_story"
            android:checkable="true"
            app:actionLayout="@layout/checkbox"
            app:showAsAction="ifRoom|withText"/>
        <!--app:actionViewClass="android.widget.CheckBox"-->

    </group>


</menu>
